--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,6 @@
             "name": "MyLarge"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "license": "MIT"
 }
