--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "authors": [
         {
-            "name": "MyLarge"
+            "name": "mylarge"
         }
     ],
     "minimum-stability": "dev"
